Added bootstrap and table

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
-		<h1>Woohoo!</h1>
+		<table id="data-entry">
+			<tr>
+				<th>Sport</th>
+				<th>1</th>
+				<th>2</th>
+				<th>3</th>
+				<th>4</th>
+				<th>5</th>
+			</tr>
 
 		<script type="text/javascript" src="d3.min.js"></script>
 		<script type="text/javascript" src="attendance_data.js"></script>
