Add arenas and html

--- a/index.html
+++ b/index.html
@@ -122,6 +122,23 @@
 			</tr>
 
 		</table>
+
+		<div id="infobox">
+			<h2>Chicago Bulls</h2>
+			<dl class="dl-horizontal">
+				<dt>Attendance</dt><dd>...</dd>
+				<dt>Championships</dt><dd>...</dd>
+				<dt>Founded</dt><dd>...</dd>
+				<dt>Retired Numbers</dt><dd>...</dd>
+				<dt>Arena</dt><dd>...</dd>
+				<dt>Owner(s)</dt><dd>...</dd>
+			</dl>
+		</div>
+
+		<div id="sideContainer">
+
+		</div>
+
 		<script type="text/javascript" src="d3.min.js"></script>
 		<script type="text/javascript" src="attendance_data.js"></script>
 		<script type="text/javascript" src="preferenceChooser.js"></script>
