Added function to generate city scores

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<th>4</th>
 				<th>5</th>
 			</tr>
+			<tr>
 				<th>
 					<p>Basketball</p>
 				</th>
@@ -38,6 +39,7 @@
 				<th>
 					<input type="radio" id="5-basketball" name="group1">
 				</th>
+			</tr>
 			<tr>
 				<th>
 					<p>Hockey</p>
@@ -58,6 +60,7 @@
 					<input type="radio" id="5-hockey" name="group2">
 				</th>
 			</tr>
+			<tr>
 				<th>
 					<p>Baseball</p>
 				</th>
@@ -76,6 +79,7 @@
 				<th>
 					<input type="radio" id="5-baseball" name="group3">
 				</th>
+			</tr>
 			<tr>
 				<th>
 					<p>Football</p>
@@ -96,6 +100,7 @@
 					<input type="radio" id="5-football" name="group4">
 				</th>
 			</tr>
+			<tr>
 				<th>
 					<p>Soccer</p>
 				</th>
@@ -114,14 +119,9 @@
 				<th>
 					<input type="radio" id="5-soccer" name="group5">
 				</th>
-			<tr>
 			</tr>
-			<tr>
-			</tr>
-			<tr>
-			</tr>
-
 		</table>
+		<button class="btn btn-lg btn-info" id="submitData" onClick='submitRatings()'>Submit!</button>
 		<script type="text/javascript" src="d3.min.js"></script>
 		<script type="text/javascript" src="attendance_data.js"></script>
 		<script type="text/javascript" src="preferenceChooser.js"></script>
