Add side view html

--- a/index.html
+++ b/index.html
@@ -136,12 +136,18 @@
 		</div>
 
 		<div id="sideContainer">
-
+			<ul>
+				<li class="scoreBox"><span class="scoreValue"></span></li>
+				<li class="scoreBox"><span class="scoreValue"></span></li>
+				<li class="scoreBox"><span class="scoreValue"></span></li>
+				<li class="scoreBox"><span class="scoreValue"></span></li>
+			</ul>
 		</div>
 
 		<script type="text/javascript" src="d3.min.js"></script>
 		<script type="text/javascript" src="attendance_data.js"></script>
 		<script type="text/javascript" src="preferenceChooser.js"></script>
+		<script type="text/javascript" src="sideView.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
