Load city data on hover

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 			<div id="infobox">
 				<h2 id="team-name">Chicago Bulls</h2>
 				<dl class="dl-horizontal">
+					<dt>Rank</dt><dd id="info-description"></dd>
 					<dt>Attendance</dt><dd id="info-attendance">23,101</dd>
 					<dt>Championships</dt><dd id="info-championships">3</dd>
 					<dt>Founded</dt><dd id="info-founded">1975</dd>
