Integrate map into index.html

--- a/map.html
+++ b/map.html
@@ -34,10 +34,10 @@ h1{
     <h1><span>Choose City</span></h1>
     
   </div>
-    <script type="text/javascript" src="d3/d3.js"></script>
-    <script type="text/javascript" src="d3/d3.csv.js"></script>
-    <script type="text/javascript" src="d3/d3.geo.js"></script>
-    <script type="text/javascript" src="d3/d3.geom.js"></script>
+    <script type="text/javascript" src="d3.min.js"></script>
+    <script type="text/javascript" src="d3.csv.js"></script>
+    <script type="text/javascript" src="d3.geo.js"></script>
+    <script type="text/javascript" src="d3.geom.js"></script>
     <script type="text/javascript">
 
 var w = 640,
