--- a/index.html
+++ b/index.html
@@ -129,12 +129,19 @@
 					<li class="scoreBox"><span class="scoreValue"></span></li>
 				</ul>
 			</div>
+
+			<div id="title">
+				<h1>Sports Map Visualization</h1>
+			</div>
 		</div>
 
 		<script type="text/javascript" src="d3.min.js"></script>
+		<script type="text/javascript" src="d3.csv.js"></script>
+		<script type="text/javascript" src="d3.geo.js"></script>
+		<script type="text/javascript" src="d3.geom.js"></script>
 		<script type="text/javascript" src="attendance_data.js"></script>
-		<script type="text/javascript" src="preferenceChooser.js"></script>
 		<script type="text/javascript" src="sideView.js"></script>
+		<script type="text/javascript" src="preferenceChooser.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
