NY icons and style changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id="choiceView">
 			<h1>Please rate the following sports from 1 to 5.</h1>
-			<div class="lead">1 being your most favorite and 5 being your least favorite.</div>
+			<div class="lead">1 being you love the sport and 5 being you dislike it.</div>
 			<table class = "table table-striped" id="data-entry">
 				<tr>
 					<td>Sport</td>
@@ -128,6 +128,7 @@
 					<li class="scoreBox"><span class="scoreValue"></span></li>
 					<li class="scoreBox"><span class="scoreValue"></span></li>
 				</ul>
+				<small class="sidenote">Note: bars indicate a team's ranking in attendance relative to other teams in the same sport.</small>
 			</div>
 
 			<div id="title">
