Add icons and moving infobox

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 					<dt>Arena</dt><dd id="info-arena">Eastern West Center</dd>
 					<dt>Owner(s)</dt><dd id="info-owner">Tom Player</dd>
 				</dl>
+				<img id="league-icon">
 			</div>
 
 			<div id="sideContainer">
